--- a/frontend/twitterclone/package.json
+++ b/frontend/twitterclone/package.json
@@ -10,6 +10,7 @@
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
