--- a/.github/workflows/main_reactapppipeline.yml
+++ b/.github/workflows/main_reactapppipeline.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd ./twittor-clone-react-tailwind/frontend/twitterclone
+          cd ./frontend/twitterclone
           npm install
           npm run build --if-present
           npm run test --if-present
